--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "markdown-it": "^14.1.0",
+    "mysql2": "^3.14.1",
+    "sequelize": "^6.37.7",
     "ws": "^8.18.1"
   }
 }
